# granite

./: pyproject.toml
.ipynb_checkpoints/: granite_function_calling-checkpoint.ipynb
