[tool.poetry]
name = "granite"
version = "0.1.0"
description = ""
authors = ["Andre Wiradarma <awiradarma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.47.0"
langchain = "^0.3.10"
langchain-ibm = "^0.3.5"
jupyter = "^1.1.1"
ollama = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
